--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<html>
+{% block title_block %}
+    {% if category %}
+        {{ category.name }}
+    {% else %}
+        Unknown Category
+    {% endif %}
+{% endblock %}
 
-<head>
-    <title>Rango</title>
-</head>
 
-<body>
-    <div>
+
+{% block body_block %}
     {% if category %} 
         <h1>{{ category.name }}</h1>
         {% if pages %}
@@ -19,18 +23,9 @@
         {% else %}
         <strong>No pages currently in category.</strong>
         {% endif %}
+        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+
     {% else %}
         The specified category does not exist.
     {% endif %}
-    </div>
-    <div>
-        <a href="/rango/">Index</a>
-        {% if category %}
-            <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a>
-        {% else %} 
-            The specified category does not exist.
-        {% endif %}
-    </div>
-</body>
-
-</html>
+{% endblock %}  
